# rustypill-firmware

./: Cargo.toml
src/: app.rs  esp8266.rs  lcd.rs  lib.rs  net.rs  sync.rs  util.rs
