[package]
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rustypill"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m-rtfm = "0.5.0"
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
heapless = "0.5.1"
serde-json-core = "0.1.0"
rand_core = "0.4"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.httparse]
version = "1.3.4"
default-features = false

[dependencies.embedded-websocket]
git = "https://github.com/ninjasource/embedded-websocket.git"
branch = "master"

[dependencies.stm32f1]
version = "0.8.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[[bin]]
name ="rustypill"
path = "src/app.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
